Table usuarios{
  id_usuario int [primary key, note: "IDENTITY(1,1)"]
  password varchar(50) 
  correo_electronico varchar(100) //indice unico
  primer_nombre varchar(100) 
  segundo_nombre varchar(100)
  primer_apellido varchar(100)
  segundo_apellido varchar(100)
  fecha_ingreso datetime2
  salario_mensual_base decimal(12,2)
  estado_usuario bit

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
  //pata gallo debe quedar con llave foranea
}

Table presupuestos{
  id_presupuesto int [primary key, note: "IDENTITY(1,1)"]
  id_usuario int //llave foranea
  nombre_presupuesto varchar(300)
  anio_inicio smallint
  mes_inicio tinyint
  anio_fin smallint
  mes_fin tinyint
  total_ingresos_planificados decimal(12,2)
  total_gastos_planificados decimal(12,2)
  total_ahorro_planificado decimal(12,2)
  fecha_y_hora_creacion datetime2
  estado_presupuesto varchar(100)

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
}

Table categorias{
  id_categoria int [primary key, note: "IDENTITY(1,1)"]
  nombre_categoria varchar(300)
  tipo_categoria varchar(100)
  nombre_icono varchar(100)
  color_hexademical varchar(7)
  orden_presentacion int

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
}

Table subcategorias{
  id_subcategoria int [primary key, note: "IDENTITY(1,1)"]
  id_categoria int //fk
  nombre_subcategoria varchar(300)
  estado_subcategoria bit
  subcategoria_por_defecto bit

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
}

Table prespuesto_detalles{
  id_detalle int [primary key, note: "IDENTITY(1,1)"]
  id_presupuesto int //lave foranea
  id_subcategoria int//llave foranea
  monto_mensual decimal(12,2)
  observaciones varchar(500)

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
}

Table obligaciones_fijas{
  id_obligacion int [primary key, note: "IDENTITY(1,1)"]
  id_subcategoria int //foranea
  nombre_obligacion varchar(300)
  monto_mensual decimal(12,2)
  dia_vencimiento tinyint
  estado_vigente bit
  fecha_inicio date
  fecha_fin date

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
}

Table transacciones{
  id_transaccion int [primary key, note: "IDENTITY(1,1)"]
  id_usuario int
  id_detalle int
  anio_transaccion smallint
  mes_transaccion tinyint
  id_subcategoria int
  tipo_transaccion varchar(100)
  descripcion_movimiento varchar(300)
  monto_transaccion decimal(12,2)
  fecha_transaccion date
  metodo_pago varchar(100)
  numero_factura int
  observaciones varchar(500)
  fecha_y_hora_registro datetime2

  creado_por int
  modificado_por int
  creado_en datetime2
  modificado_en datetime2
  
}

Table transacciones_obligaciones_fijas{
  id_transaccion int [primary key]
  id_obligacion int//foranea
}

//puerto por defecto de mssql


Ref: "usuarios"."id_usuario" < "presupuestos"."id_usuario"

Ref: "presupuestos"."id_presupuesto" < "prespuesto_detalles"."id_presupuesto"



Ref: "transacciones"."id_transaccion" < "transacciones_obligaciones_fijas"."id_transaccion"

Ref: "obligaciones_fijas"."id_obligacion" < "transacciones_obligaciones_fijas"."id_obligacion"

Ref: "categorias"."id_categoria" < "subcategorias"."id_categoria"







Ref: "subcategorias"."id_subcategoria" < "obligaciones_fijas"."id_subcategoria"

Ref: "subcategorias"."id_subcategoria" < "prespuesto_detalles"."id_subcategoria"



Ref: "prespuesto_detalles"."id_detalle" < "transacciones"."id_detalle"
